password reset function created(not finished)

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <h2>This website is a blog site.</h2>
+    <h3>Owned by westlifesdz</h3>
 
 {% endblock content %}
